# package-python-ebury-interview

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  init-db.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: airflow.cfg
dags/: customer_transactions_pipeline.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: agg_customer_summary.sql  agg_monthly_summary.sql  dim_table.sql  fact_table.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_customer_transactions.sql
dbt/tests/: assert_quantity_is_positive.sql  assert_total_amount_is_non_negative.sql  assert_transaction_date_in_range.sql
src/ebury_customer_transactions/: __init__.py  tasks.py
tests/: test_dag.py  test_ingestion.py
